collapse bug fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ body {
   padding: 30px;
   text-align: center;
   text-transform: uppercase;
-  transition: 0.5s;
+  transition: 0.6s;
   background-size: 200% auto;
   color: rgb(70, 70, 70);
   /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
@@ -44,6 +44,7 @@ body {
   background-position: right center;
   color: black;
   font-weight: bold;
+  box-shadow: -2px -2px 10px rgb(77, 77, 77);
 }
 
 .form {
